start of a demo app for testing all JS functions

--- a/demo_df_websockets/templates/index.html
+++ b/demo_df_websockets/templates/index.html
@@ -13,8 +13,8 @@
             integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
             crossorigin="anonymous"></script>
 </head>
-<body>
-<h1>Available Javascripts signals </h1>
+<body class="h-100 m-3">
+<h1 class="text-center">Available Javascripts signals </h1>
 <div class="accordion" id="mainAccordion">
 
 
